<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration"
    android:padding="15dp"
    android:background="#FFFFE0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/fline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/first_name" />

            <EditText
                android:id="@+id/firstname"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:layout_weight="1"
                android:autofillHints=".AUTOFILL_HINT_PERSON_NAME_GIVEN"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sline"
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/last_name" />

            <EditText
                android:id="@+id/lastname"
                android:layout_width="wrap_content"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:layout_weight="1"
                android:autofillHints=".AUTOFILL_HINT_PERSON_NAME_FAMILY"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/grpSex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:buttonTint="@color/black"
                android:onClick="onRadioButtonClicked"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/rbFemale"
                android:buttonTint="@color/black"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/female" />
        </RadioGroup>

        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginTop="70dp"
            android:background="#00FFFF"
            android:gravity="center"
            android:textColor="@color/black"
            android:onClick="setResultAndSend"
            android:text="@string/send_back" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>